<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/sign_up_fragment">

    <fragment
        android:id="@+id/nearby_coffee_shops_fragment"
        android:name="com.obrekht.coffeeshops.coffeeshops.ui.nearby.NearbyCoffeeShopsFragment"
        android:label="@string/label_coffee_shops_nearby"
        tools:layout="@layout/fragment_nearby_coffee_shops">

        <action
            android:id="@+id/action_to_coffee_shops_map_fragment"
            app:destination="@id/coffee_shops_map_fragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/coffee_shops_map_fragment"
        android:name="com.obrekht.coffeeshops.map.ui.CoffeeShopsMapFragment"
        android:label="@string/label_map"
        tools:layout="@layout/fragment_coffee_shops_map">
        <argument
            android:name="coffeeShopId"
            android:defaultValue="0L"
            app:argType="long" />
        <action
            android:id="@+id/action_to_menu_fragment"
            app:destination="@id/menu_fragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/menu_fragment"
        android:name="com.obrekht.coffeeshops.menu.ui.MenuFragment"
        android:label="@string/label_menu"
        tools:layout="@layout/fragment_menu">
        <argument
            android:name="coffeeShopId"
            app:argType="long" />
        <action
            android:id="@+id/action_to_cart_fragment"
            app:destination="@id/cart_fragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/cart_fragment"
        android:name="com.obrekht.coffeeshops.cart.ui.CartFragment"
        android:label="@string/label_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/sign_up_fragment"
        android:name="com.obrekht.coffeeshops.auth.ui.signup.SignUpFragment"
        android:label="@string/label_sign_up"
        tools:layout="@layout/fragment_sign_up">
        <argument
            android:name="shouldLogOut"
            android:defaultValue="false"
            app:argType="boolean" />
    </fragment>

    <fragment
        android:id="@+id/login_fragment"
        android:name="com.obrekht.coffeeshops.auth.ui.login.LoginFragment"
        android:label="@string/label_login"
        tools:layout="@layout/fragment_login" />

    <action
        android:id="@+id/action_global_nearby_coffee_shops_fragment"
        app:destination="@id/nearby_coffee_shops_fragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:launchSingleTop="true"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpTo="@id/nav_main"
        app:popUpToInclusive="true" />

    <action
        android:id="@+id/action_global_sign_up_fragment"
        app:destination="@id/sign_up_fragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:launchSingleTop="true"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpTo="@id/nav_main"
        app:popUpToInclusive="true" />

    <action
        android:id="@+id/action_global_login_fragment"
        app:destination="@id/login_fragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:launchSingleTop="true"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpTo="@id/login_fragment" />

</navigation>
